kubernetes/apps/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: efym-net-tls
